# metiz_tenants_test

./: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: deploy.yml
DATABASE/: docker-compose.yml
REDIS/: docker-compose.yml
src/app_estimate_imports/: admin.py  apps.py  models.py  services.py  services_markup.py  utils.py  utils_excel.py  utils_markup.py
src/app_estimate_imports/handlers/: __init__.py  api_handler.py  base_handler.py  compose_handler.py  graph_handler.py  grid_handler.py  markup_handler.py  parse_handler.py
src/app_estimate_imports/migrations/: 0001_initial.py  0002_parsemarkup.py  0003_alter_importedestimatefile_options_and_more.py
src/app_estimate_imports/services/: __init__.py  base_service.py  color_group_service.py  graph_service.py  services.py  (+6 more)
src/app_materials/: admin.py  apps.py  models.py  urls.py
src/app_outlay/: admin.py  apps.py  exceptions.py  forms.py  helpers.py  models.py  repositories.py  services_materialize.py  signals.py  urls.py  utils_calc.py
src/app_overhead_costs/: admin.py  apps.py  models.py
src/app_suppliers/: admin.py  apps.py  models.py
src/app_technical_cards/: admin.py  apps.py  models.py  serializers.py  services_versioning.py  urls.py  views.py
src/app_tenants/: admin.py  apps.py  models.py
src/app_units/: admin.py  apps.py  models.py
src/app_users/: admin.py  apps.py  models.py
src/app_works/: admin.py  apps.py  models.py  urls.py
src/core/: base_repository.py  settings.py  tenant_nf.py  urls.py  urls_public.py  views_public.py  views_tenant.py
(+161 files in other folders)
