[tool.poetry]
name = "testdjangotenants"
version = "0.1.0"
description = ""
authors = ["RomanL91 <dev_roman91@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.6"
django-tenants = "^3.9.0"
django-tenant-users = "^2.1.2"
psycopg = {extras = ["binary"], version = "^3.2.10"}
openpyxl = "^3.1.5"
django-nested-admin = "^4.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
